crates/cli/tests/snapshots/with_expression__fix_ae23a2674b77de25e8ce8d1d5cd54a9b31aaf281fce151c907d6d32d78a0c457.snap
---
source: crates/cli/tests/with_expression.rs
expression: "\"with { hello = pkgs.hello; }; 1\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-with { hello = pkgs.hello; }; 1
+1
