crates/cli/tests/snapshots/with_expression__fix_c8dad84322f66ff08ad079964274b46e94307e6e6daf82b0b25517f83011631b.snap
---
source: crates/cli/tests/with_expression.rs
expression: "\"with { git = pkgs.git; curl = pkgs.curl; }; [ git curl ]\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-with { git = pkgs.git; curl = pkgs.curl; }; [ git curl ]
+with { inherit (pkgs) git curl; }; [ git curl ]
