crates/cli/tests/snapshots/with_expression__lint_972db7df679046d7a1c08420ff35ecb67a3e756d925266de2ae2cc3fb5088e5c.snap
---
source: crates/cli/tests/with_expression.rs
expression: "\"with pkgs; [ git curl ]\""
---
[24] Warning: Avoid `with` expressions
   ╭─[<temp_file_path>:1:1]
   │
 1 │ with pkgs; [ git curl ]
   · ───────────┬───────────  
   ·            ╰───────────── with pkgs; introduces implicit scope; use explicit attribute access or inherit instead
───╯
