crates/cli/tests/snapshots/with_expression__lint_c8dad84322f66ff08ad079964274b46e94307e6e6daf82b0b25517f83011631b.snap
---
source: crates/cli/tests/with_expression.rs
expression: "\"with { git = pkgs.git; curl = pkgs.curl; }; [ git curl ]\""
---
[04] Warning: Assignment instead of inherit from
   ╭─[<temp_file_path>:1:8]
   │
 1 │ with { git = pkgs.git; curl = pkgs.curl; }; [ git curl ]
   │        ───────┬───────  
   │               ╰───────── This assignment is better written with inherit
───╯
[04] Warning: Assignment instead of inherit from
   ╭─[<temp_file_path>:1:24]
   │
 1 │ with { git = pkgs.git; curl = pkgs.curl; }; [ git curl ]
   │                        ────────┬────────  
   │                                ╰────────── This assignment is better written with inherit
───╯
